# air-quality-wing-zephyr-demo

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  prj.conf  prj.debug.conf  west-ncs.yml  west-vanilla.yml  west.yml
.github/workflows/: build.yml  build_ncs.yml  build_vanilla.yml
_hex/: lora-e5-mcuboot.hex
basic/: CMakeLists.txt  prj.conf
basic/boards/: circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9160ns.overlay  lora_e5_dev_board.conf  lora_e5_dev_board.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  particle_xenon.conf  particle_xenon.overlay
basic/src/: main.c
basic_with_display/: CMakeLists.txt  prj.conf
basic_with_display/boards/: circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay  particle_xenon.conf  particle_xenon.overlay
basic_with_display/src/: main.c
ble/: CMakeLists.txt  prj.conf
ble/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  particle_xenon.conf  particle_xenon.overlay
ble/config/: ble.conf
ble/src/: main.c
ble/src/ble/: CMakeLists.txt  app_ble.c  app_ble.h
ble/src/ble/services/: aqw.c  aqw.h
boards/: nrf52840dk_nrf52840.overlay
ethernet_hub_ble/: CMakeLists.txt  Kconfig  prj.conf
ethernet_hub_ble/boards/: particle_xenon.conf  particle_xenon.overlay
ethernet_hub_ble/config/: golioth.conf
ethernet_hub_ble/src/: main.c
ethernet_hub_ble/src/ble/: CMakeLists.txt  app_ble.c  app_ble.h
ethernet_hub_ble/src/ble/app_ble/: CMakeLists.txt  gatt.c  gatt.h  scan.c  scan.h
ethernet_hub_ble/src/ble/app_ble/services/: aqw.h  aqw_c.c  aqw_c.h
ethernet_hub_ble/src/event_manager/: app_event_manager.c  app_event_manager.h
ethernet_hub_ble/src/network/: CMakeLists.txt  app_network.c  app_network.h
golioth/: .gitignore  CMakeLists.txt  prj.conf
golioth/boards/: circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay  circuitdojo_feather_nrf9160ns.conf
golioth/config/: golioth.conf
golioth/src/: main.c
golioth/src/codec/: app_codec.c  app_codec.h
scripts/: build_all.sh
src/: main.c
